--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load ="partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Page-1</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+<body>
+  <h1>Search for images</h1>
 
-    <script type="module" src="./main.js"></script>
-  </body>
+  <form id="searchForm"><label for="searchRequest">Enter data for the request</label>
+    <!-- Підпис поблизу поля введення -->
+    <input type="text" id="searchRequest" name="searchRequest" required>
+    <!-- Поле для введення тексту з обов'язковим заповненням -->
+    <button type="submit">Search</button> <!-- Кнопка для відправки форми -->
+  </form>
+  <div id="gallery" class="gallery"></div>
+  <!-- елемент для індикатора завантаження -->
+  <div class="loader" style="display: none;"></div>
+
+
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
