--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
 
 
   <script src="./main.js" type="module"></script>
+  <script src="https://unpkg.com/css-loader"></script>
+  <script src="https://unpkg.com/style-loader"></script>
+
 </body>
 
 </html>
